# termynal-sphinx

./: .gitignore  Makefile  README.rst  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/css/: detail.css
docs/source/_static/html/: collapsible.html  example.html  installation.html
docs/source/_static/js/: custom.js  json_display.js  termynal.js
docs/source/_static/specs/: openapi.yml
termynal_sphinx/: __init__.py  main.py
tests/: test_termynal_sphinx.py
