[tool.poetry]
name = "termynal-sphinx"
version = "0.1.0"
description = ""
authors = ["Uriel Mandujano <uriel.mandujano14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.812"
furo = "^2021.2.28-beta.28"
Sphinx = "^4.0.0"
sphinx-copybutton = "^0.3.1"
sphinxcontrib-openapi = "^0.7.0"
sphinx-inline-tabs = "^2020.10.19-beta.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
